--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 The Game/Assets/UniversalRenderPipelineGlobalSettings.asset
+The Game/UserSettings/EditorUserSettings.asset
